try make packages

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "postinstall": "electron-builder install-app-deps",
+    "build": "electron-builder --mac --windows --linux",
+    "release": "electron-builder --mac --windows --linux --publish always",
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -24,7 +27,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "electron": "^17.0.0"
+    "electron": "^17.0.0",
+    "electron-builder": "^22.14.5"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
@@ -54,6 +58,20 @@
           "config": {}
         }
       ]
+    }
+  },
+  "build": {
+    "appId": "net.phybros.electrontest",
+    "productName": "My Cool App",
+    "mac": {
+      "category": "public.app-category.lifestyle"
+    },
+    "dmg": {
+      "icon": false
+    },
+    "linux": {
+      "target": ["AppImage"],
+      "category": "Office"
     }
   }
 }
