--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "make": "electron-forge make",
     "postinstall": "electron-builder install-app-deps",
     "build": "electron-builder --mac --windows --linux",
-    "release": "electron-builder --mac --windows --linux --publish always",
+    "release": "electron-builder --mac --windows --linux --publish always"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
