--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@electron-forge/maker-deb": "^6.0.0-beta.63",
     "@electron-forge/maker-rpm": "^6.0.0-beta.63",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
-    "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "electron": "^17.0.0",
-    "electron-builder": "^22.14.5"
+    "@electron-forge/maker-zip": "^6.0.0-beta.63"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "electron": "^17.0.0",
+    "electron-builder": "^22.14.5"
   },
   "config": {
     "forge": {
