--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2.4.1
         with:
-          node-version: 10
+          node-version: '>=16.8.0'
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
