--- a/package.json
+++ b/package.json
@@ -23,13 +23,10 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^17.0.0",
-    "electron-builder": "^22.14.5"
+    "electron-builder": "^22.10.5"
   },
-  "dependencies": {
-  },
-  "config": {
-
-  },
+  "dependencies": {},
+  "config": {},
   "build": {
     "appId": "net.phybros.electrontest",
     "productName": "My Cool App",
