--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "postinstall": "electron-builder install-app-deps",
-    "build": "electron-builder --mac --windows --linux",
-    "release": "electron-builder --mac --windows --linux --publish always"
+    "build": "electron-builder --mac",
+    "release": "electron-builder --mac --publish always"
   },
   "repository": "https://github.com/phybros/electron-packaging-test",
   "keywords": [
