--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-quick-start",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "postinstall": "electron-builder install-app-deps",
-    "build": "electron-builder --mac",
+    "build": "",
     "release": "electron-builder --mac --publish always"
   },
   "repository": "https://github.com/phybros/electron-packaging-test",
