--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-quick-start",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "make": "electron-forge make",
     "postinstall": "electron-builder install-app-deps",
     "build": "",
-    "release": "electron-builder --mac --publish always"
+    "release": "electron-builder --publish always"
   },
   "repository": "https://github.com/phybros/electron-packaging-test",
   "keywords": [
